--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -380,7 +380,8 @@ add_executable(test_plugin
 set_target_properties(test_plugin PROPERTIES
                       CMAKE_CXX_FLAGS ${PTHREAD_CXX_FLAG}
                       LINK_FLAGS      ${PTHREAD_LINK_FLAG}
-                      RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/src")
+                      RUNTIME_OUTPUT_DIRECTORY       "${CMAKE_BINARY_DIR}/src"
+                      RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/src")
 target_link_libraries(test_plugin
                       ${PTHREAD_LINK_LIB}
                       protobuf
